--- a/index.html
+++ b/index.html
@@ -25,245 +25,8 @@
         /* الهيدر */
         header { background: rgba(255, 255, 255, 0.95); backdrop-filter: blur(10px); padding: 15px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.05); }
         .logo-container { display: flex; align-items: center; gap: 10px; cursor: pointer; }
-        .logo-img { height: 50px; }
+        .logo-img { height: 55px; } /* حجم الشعار المرفق */
         .nav-menu { display: flex; gap: 25px; list-style: none; }
         .nav-menu a { text-decoration: none; color: var(--dark-brown); font-weight: 600; transition: var(--transition); }
         .nav-menu a:hover { color: var(--primary-gold); }
-        .btn-calc { background: var(--primary-gold); color: var(--white); border: none; padding: 10px 20px; border-radius: 8px; font-weight: bold; cursor: pointer; }
-
-        /* قسم الهيرو (الواجهة الرئيسية) */
-        .hero { 
-            height: 90vh; 
-            background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://i.ibb.co/3y1ZNCk0/1.png'); 
-            background-size: cover; 
-            background-position: center; 
-            display: flex; 
-            flex-direction: column; 
-            justify-content: center; 
-            align-items: center; 
-            text-align: center; 
-            color: var(--white);
-            padding: 20px;
-        }
-        .hero h1 { font-size: clamp(30px, 6vw, 60px); font-weight: 900; margin-bottom: 20px; }
-        .hero p { font-size: 1.2rem; max-width: 700px; margin-bottom: 30px; opacity: 0.9; }
-        .hero-btns { display: flex; gap: 15px; }
-        .btn-gold { background: var(--primary-gold); color: white; padding: 15px 30px; border-radius: 8px; text-decoration: none; font-weight: bold; }
-        .btn-outline { border: 2px solid white; color: white; padding: 15px 30px; border-radius: 8px; text-decoration: none; font-weight: bold; }
-
-        /* قسم الأقسام */
-        .section-title { text-align: center; padding: 60px 0 20px; }
-        .section-title h2 { font-size: 2.5rem; font-weight: 800; }
-        .section-title p { color: #888; margin-top: 10px; }
-
-        .categories-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 20px; padding: 20px 5%; }
-        .cat-card { position: relative; border-radius: 15px; overflow: hidden; height: 350px; cursor: pointer; transition: var(--transition); }
-        .cat-card img { width: 100%; height: 100%; object-fit: cover; transition: 0.5s; }
-        .cat-card:hover img { transform: scale(1.1); }
-        .cat-overlay { position: absolute; bottom: 0; width: 100%; background: linear-gradient(transparent, rgba(0,0,0,0.8)); color: white; padding: 20px; text-align: right; }
-
-        /* قسم لماذا شبابيك */
-        .features { background: var(--light-beige); padding: 80px 5%; display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 30px; text-align: center; }
-        .feature-item { background: white; padding: 40px 20px; border-radius: 15px; box-shadow: 0 5px 20px rgba(0,0,0,0.02); }
-        .feature-item i { font-size: 2.5rem; color: var(--primary-gold); margin-bottom: 20px; }
-        .feature-item h3 { margin-bottom: 10px; }
-
-        /* الفوتر */
-        footer { background: var(--dark-brown); color: white; padding: 80px 5% 40px; }
-        .footer-content { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 40px; margin-bottom: 60px; }
-        .footer-box h3 { color: var(--primary-gold); margin-bottom: 20px; }
-        .footer-box p { line-height: 1.8; opacity: 0.8; }
-        .footer-links { list-style: none; }
-        .footer-links li { margin-bottom: 10px; }
-        .footer-links a { color: white; text-decoration: none; opacity: 0.8; }
-        
-        .whatsapp-footer-btn { background: var(--white); color: var(--dark-brown); display: inline-flex; align-items: center; gap: 10px; padding: 12px 25px; border-radius: 50px; text-decoration: none; font-weight: bold; margin-top: 20px; }
-
-        /* لوحة التحكم */
-        .page { display: none; padding: 40px 5%; }
-        .active { display: block; }
-        .admin-panel { background: #f4f4f4; padding: 40px; border-radius: 15px; max-width: 600px; margin: auto; }
-        input { width: 100%; padding: 12px; margin: 10px 0; border: 1px solid #ddd; border-radius: 8px; }
-
-        @media (max-width: 768px) {
-            .nav-menu { display: none; }
-            .hero h1 { font-size: 35px; }
-        }
-    </style>
-</head>
-<body>
-
-    <div class="top-bar">
-        <div>مرحباً بكم في شبابيك للستائر</div>
-        <div><i class="fa-solid fa-phone"></i> +964 788 300 2797</div>
-    </div>
-
-    <header>
-        <button class="btn-calc" onclick="window.location.href='#contact'">احسب سعر ستارتك</button>
-        <ul class="nav-menu">
-            <li><a href="#home">الرئيسية</a></li>
-            <li><a href="#categories">المنتجات</a></li>
-            <li><a href="#about">من نحن</a></li>
-            <li><a href="#contact">تواصل معنا</a></li>
-        </ul>
-        <div class="logo-container" onclick="checkAdmin()">
-            <img src="https://i.ibb.co/3y1ZNCk0/1.png" alt="شبابيك للستائر" class="logo-img">
-        </div>
-    </header>
-
-    <div id="userPage" class="page active">
-        <section class="hero" id="home">
-            <h1>فخامة التفاصيل تبدأ من <br> <span style="color: var(--primary-gold);">شبابيك منزلك</span></h1>
-            <p>اكتشف أفخم تشكيلة ستائر منزلية بتصاميم عصرية وكلاسيكية تناسب ذوقك الرفيع.</p>
-            <div class="hero-btns">
-                <a href="#categories" class="btn-gold">احسب سعر ستارتك الآن</a>
-                <a href="https://wa.me/9647883002797" class="btn-outline">طلب استشارة منزلية</a>
-            </div>
-        </section>
-
-        <section class="section-title" id="categories">
-            <h2>أقسامنا</h2>
-            <p>اختر من بين مجموعتنا المتنوعة</p>
-        </section>
-        <div class="categories-grid" id="productsGrid">
-            </div>
-
-        <section class="section-title">
-            <h2>لماذا شبابيك؟</h2>
-            <p>مميزات تجعلنا الخيار الأول</p>
-        </section>
-        <div class="features">
-            <div class="feature-item">
-                <i class="fa-solid fa-palette"></i>
-                <h3>تصاميم حصرية</h3>
-                <p>مجموعة متنوعة من التصاميم العصرية والكلاسيكية.</p>
-            </div>
-            <div class="feature-item">
-                <i class="fa-solid fa-ruler-combined"></i>
-                <h3>مقاسات مخصصة</h3>
-                <p>تفصيل على حسب مقاسات نوافذك بدقة عالية.</p>
-            </div>
-            <div class="feature-item">
-                <i class="fa-solid fa-truck-fast"></i>
-                <h3>تركيب منزلي</h3>
-                <p>فريق متخصص لتركيب الستائر في منزلك.</p>
-            </div>
-            <div class="feature-item">
-                <i class="fa-solid fa-shield-halved"></i>
-                <h3>ضمان الجودة</h3>
-                <p>ضمان شامل على جميع منتجاتنا وخدماتنا.</p>
-            </div>
-        </div>
-
-        <footer id="contact">
-            <div class="footer-content">
-                <div class="footer-box">
-                    <h3>شبابيك للستائر</h3>
-                    <p>نقدم أفخم تشكيلة من الستائر المنزلية بأعلى جودة وأفضل الأسعار، خبرة طويلة في تصميم وتركيب الستائر.</p>
-                    <a href="https://wa.me/9647883002797" class="whatsapp-footer-btn">
-                        <i class="fa-brands fa-whatsapp"></i> تواصل عبر واتساب
-                    </a>
-                </div>
-                <div class="footer-box">
-                    <h3>روابط سريعة</h3>
-                    <ul class="footer-links">
-                        <li><a href="#">الرئيسية</a></li>
-                        <li><a href="#categories">المنتجات</a></li>
-                        <li><a href="#">من نحن</a></li>
-                        <li><a href="#">تواصل معنا</a></li>
-                    </ul>
-                </div>
-                <div class="footer-box">
-                    <h3>تواصل معنا</h3>
-                    <p><i class="fa-solid fa-location-dot"></i> العراق - بغداد</p>
-                    <p><i class="fa-solid fa-phone"></i> +964 788 300 2797</p>
-                </div>
-            </div>
-            <div style="text-align: center; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 30px; opacity: 0.6;">
-                © 2025 شبابيك للستائر. جميع الحقوق محفوظة.
-            </div>
-        </footer>
-    </div>
-
-    <div id="adminPage" class="page">
-        <div class="admin-panel">
-            <h2>لوحة التحكم الإدارية</h2>
-            <input type="text" id="pName" placeholder="اسم القسم أو الستارة">
-            <input type="text" id="pImage" placeholder="رابط الصورة المباشر">
-            <button class="btn-gold" onclick="saveProduct()" style="width: 100%; border: none; cursor: pointer;">إضافة القسم</button>
-            
-            <h3 style="margin-top: 30px;">الأقسام الحالية</h3>
-            <div id="adminList"></div>
-            <button onclick="location.reload()" style="margin-top: 20px; border: none; background: none; color: red; cursor: pointer;">خروج</button>
-        </div>
-    </div>
-
-    <script>
-        let products = JSON.parse(localStorage.getItem("shababik_pro")) || [
-            {id: 1, name: "ستائر رول", img: "https://images.unsplash.com/photo-1617806118233-f8e187c44b5c?q=80&w=1000"},
-            {id: 2, name: "ستائر ديكور", img: "https://images.unsplash.com/photo-1513519245088-0e12902e5a38?q=80&w=1000"},
-            {id: 3, name: "ستائر شفافة", img: "https://images.unsplash.com/photo-1548142813-c348350df52b?q=80&w=1000"},
-            {id: 4, name: "ستائر بلاك أوت", img: "https://images.unsplash.com/photo-1505691938895-1758d7eaa511?q=80&w=1000"}
-        ];
-
-        let clickCount = 0;
-        function checkAdmin() {
-            clickCount++;
-            if (clickCount >= 5) {
-                let pass = prompt("أدخل كلمة المرور لدخول الإدارة:");
-                if (pass === "1234") {
-                    document.getElementById('userPage').classList.remove('active');
-                    document.getElementById('adminPage').classList.add('active');
-                    renderAdmin();
-                }
-                clickCount = 0;
-            }
-            setTimeout(() => clickCount = 0, 3000);
-        }
-
-        function renderUser() {
-            const grid = document.getElementById('productsGrid');
-            grid.innerHTML = products.map(p => `
-                <div class="cat-card">
-                    <img src="${p.img}" alt="${p.name}">
-                    <div class="cat-overlay">
-                        <h3>${p.name}</h3>
-                    </div>
-                </div>
-            `).join('');
-        }
-
-        function renderAdmin() {
-            const list = document.getElementById('adminList');
-            list.innerHTML = products.map((p, index) => `
-                <div style="display:flex; justify-content:space-between; padding:10px; border-bottom:1px solid #ddd;">
-                    <span>${p.name}</span>
-                    <button onclick="deleteProduct(${index})" style="color:red; border:none; background:none; cursor:pointer;">حذف</button>
-                </div>
-            `).join('');
-        }
-
-        function saveProduct() {
-            const name = document.getElementById('pName').value;
-            const img = document.getElementById('pImage').value;
-            if (name && img) {
-                products.push({id: Date.now(), name, img});
-                localStorage.setItem("shababik_pro", JSON.stringify(products));
-                renderAdmin();
-                renderUser();
-                document.getElementById('pName').value = '';
-                document.getElementById('pImage').value = '';
-            }
-        }
-
-        function deleteProduct(index) {
-            products.splice(index, 1);
-            localStorage.setItem("shababik_pro", JSON.stringify(products));
-            renderAdmin();
-            renderUser();
-        }
-
-        window.onload = renderUser;
-    </script>
-</body>
-</html>
+        .btn-calc { background: var(--primary-gold); color: var(--white); border: none; padding: 10px
