--- a/index.html
+++ b/index.html
@@ -25,8 +25,27 @@
         /* الهيدر */
         header { background: rgba(255, 255, 255, 0.95); backdrop-filter: blur(10px); padding: 15px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.05); }
         .logo-container { display: flex; align-items: center; gap: 10px; cursor: pointer; }
-        .logo-img { height: 55px; } /* حجم الشعار المرفق */
+        .logo-img { height: 55px; } 
         .nav-menu { display: flex; gap: 25px; list-style: none; }
         .nav-menu a { text-decoration: none; color: var(--dark-brown); font-weight: 600; transition: var(--transition); }
         .nav-menu a:hover { color: var(--primary-gold); }
-        .btn-calc { background: var(--primary-gold); color: var(--white); border: none; padding: 10px
+        .btn-calc { background: var(--primary-gold); color: var(--white); border: none; padding: 10px 20px; border-radius: 8px; font-weight: bold; cursor: pointer; }
+
+        /* قسم الهيرو مع الصورة الخلفية المطلوبة */
+        .hero { 
+            height: 90vh; 
+            background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.5)), url('https://i.ibb.co/0R1MK2d7/Gemini-Generated-Image-tnocdatnocdatnoc.png'); 
+            background-size: cover; 
+            background-position: center; 
+            display: flex; 
+            flex-direction: column; 
+            justify-content: center; 
+            align-items: center; 
+            text-align: center; 
+            color: var(--white);
+            padding: 20px;
+        }
+        .hero h1 { font-size: clamp(30px, 6vw, 60px); font-weight: 900; margin-bottom: 20px; text-shadow: 2px 2px 15px rgba(0,0,0,0.6); }
+        .hero p { font-size: 1.2rem; max-width: 700px; margin-bottom: 30px; opacity: 0.9; text-shadow: 1px 1px 10px rgba(0,0,0,0.5); }
+        .hero-btns { display: flex; gap: 15px; }
+        .btn-gold { background:
