--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>شبابيك للستائر - الفخامة تبدأ من هنا</title>
+    <title>شبابيك للستائر</title>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
@@ -11,41 +11,144 @@
         :root {
             --primary-gold: #d9b382;
             --dark-brown: #3d2e24;
-            --light-beige: #f9f6f2;
+            --light-bg: #f9f6f2;
             --white: #ffffff;
-            --transition: all 0.3s ease;
         }
 
         * { box-sizing: border-box; margin: 0; padding: 0; }
         body { font-family: 'Cairo', sans-serif; background-color: var(--white); color: var(--dark-brown); scroll-behavior: smooth; }
 
         /* شريط التنبيه العلوي */
-        .top-bar { background: var(--dark-brown); color: var(--white); padding: 10px 5%; display: flex; justify-content: space-between; font-size: 14px; }
+        .top-bar { background: var(--dark-brown); color: var(--white); padding: 12px 5%; display: flex; justify-content: space-between; font-size: 14px; align-items: center; }
 
         /* الهيدر */
-        header { background: rgba(255, 255, 255, 0.95); backdrop-filter: blur(10px); padding: 15px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.05); }
-        .logo-container { display: flex; align-items: center; gap: 10px; cursor: pointer; }
-        .logo-img { height: 55px; } 
-        .nav-menu { display: flex; gap: 25px; list-style: none; }
-        .nav-menu a { text-decoration: none; color: var(--dark-brown); font-weight: 600; transition: var(--transition); }
-        .nav-menu a:hover { color: var(--primary-gold); }
-        .btn-calc { background: var(--primary-gold); color: var(--white); border: none; padding: 10px 20px; border-radius: 8px; font-weight: bold; cursor: pointer; }
+        header { background: rgba(255, 255, 255, 0.98); backdrop-filter: blur(10px); padding: 15px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 15px rgba(0,0,0,0.05); }
+        .logo-img { height: 60px; cursor: pointer; }
+        .nav-menu { display: flex; gap: 30px; list-style: none; }
+        .nav-menu a { text-decoration: none; color: var(--dark-brown); font-weight: 700; font-size: 1.1rem; }
+        .btn-header-calc { background: var(--primary-gold); color: white; border: none; padding: 10px 20px; border-radius: 8px; font-weight: bold; cursor: pointer; }
 
-        /* قسم الهيرو مع الصورة الخلفية المطلوبة */
+        /* قسم الهيرو */
         .hero { 
-            height: 90vh; 
+            height: 85vh; 
             background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.5)), url('https://i.ibb.co/0R1MK2d7/Gemini-Generated-Image-tnocdatnocdatnoc.png'); 
-            background-size: cover; 
-            background-position: center; 
-            display: flex; 
-            flex-direction: column; 
-            justify-content: center; 
-            align-items: center; 
-            text-align: center; 
-            color: var(--white);
-            padding: 20px;
+            background-size: cover; background-position: center; 
+            display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; color: var(--white); padding: 20px;
         }
-        .hero h1 { font-size: clamp(30px, 6vw, 60px); font-weight: 900; margin-bottom: 20px; text-shadow: 2px 2px 15px rgba(0,0,0,0.6); }
-        .hero p { font-size: 1.2rem; max-width: 700px; margin-bottom: 30px; opacity: 0.9; text-shadow: 1px 1px 10px rgba(0,0,0,0.5); }
-        .hero-btns { display: flex; gap: 15px; }
-        .btn-gold { background:
+        .hero h1 { font-size: clamp(32px, 7vw, 65px); font-weight: 900; line-height: 1.2; margin-bottom: 25px; }
+        .hero span { color: var(--primary-gold); }
+        .hero p { font-size: 1.3rem; max-width: 800px; margin-bottom: 35px; opacity: 0.95; }
+        .hero-btns { display: flex; gap: 20px; }
+        .btn-gold-lg { background: var(--primary-gold); color: white; padding: 18px 35px; border-radius: 10px; text-decoration: none; font-weight: bold; font-size: 1.1rem; transition: 0.3s; }
+        .btn-outline-lg { border: 2px solid white; color: white; padding: 18px 35px; border-radius: 10px; text-decoration: none; font-weight: bold; font-size: 1.1rem; transition: 0.3s; }
+
+        /* الأقسام */
+        .section-padding { padding: 80px 5%; text-align: center; }
+        .section-title { font-size: 2.8rem; font-weight: 900; margin-bottom: 15px; }
+        .section-subtitle { color: #777; font-size: 1.1rem; margin-bottom: 50px; }
+        
+        .categories-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 30px; }
+        .cat-card { position: relative; border-radius: 20px; overflow: hidden; height: 400px; box-shadow: 0 10px 25px rgba(0,0,0,0.1); }
+        .cat-card img { width: 100%; height: 100%; object-fit: cover; }
+        .cat-overlay { position: absolute; bottom: 0; width: 100%; background: linear-gradient(transparent, rgba(0,0,0,0.9)); color: white; padding: 30px; text-align: right; }
+        .cat-overlay h3 { font-size: 1.8rem; }
+
+        /* المميزات */
+        .features-bg { background-color: var(--light-bg); padding: 100px 5%; }
+        .features-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 40px; }
+        .feature-box { background: white; padding: 50px 30px; border-radius: 20px; text-align: center; transition: 0.3s; }
+        .feature-box:hover { transform: translateY(-10px); }
+        .feature-box i { font-size: 3rem; color: var(--primary-gold); margin-bottom: 25px; }
+        .feature-box h3 { font-size: 1.5rem; margin-bottom: 15px; }
+
+        /* الفوتر */
+        footer { background: var(--dark-brown); color: white; padding: 100px 5% 50px; }
+        .footer-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 50px; border-bottom: 1px solid rgba(255,255,255,0.1); padding-bottom: 60px; }
+        .footer-h3 { color: var(--primary-gold); font-size: 1.8rem; margin-bottom: 25px; }
+        .footer-p { line-height: 1.8; opacity: 0.8; font-size: 1.1rem; }
+        .whatsapp-btn { background: #25D366; color: white; text-decoration: none; display: inline-flex; align-items: center; gap: 12px; padding: 15px 30px; border-radius: 50px; font-weight: bold; margin-top: 25px; font-size: 1.2rem; }
+
+        /* الإدارة */
+        .page { display: none; }
+        .active { display: block; }
+        .admin-form { background: #eee; padding: 50px; border-radius: 20px; max-width: 600px; margin: 100px auto; color: #333; }
+        input { width: 100%; padding: 15px; margin: 12px 0; border-radius: 10px; border: 1px solid #ccc; font-size: 1.1rem; }
+
+        @media (max-width: 768px) {
+            .nav-menu { display: none; }
+            header { justify-content: space-between; }
+            .hero h1 { font-size: 40px; }
+        }
+    </style>
+</head>
+<body>
+
+    <div class="top-bar">
+        <div>مرحباً بكم في شبابيك للستائر</div>
+        <div><i class="fa-solid fa-phone"></i> +964 788 300 2797</div>
+    </div>
+
+    <header>
+        <button class="btn-header-calc" onclick="location.href='https://wa.me/9647883002797'">احسب سعر ستارتك</button>
+        <ul class="nav-menu">
+            <li><a href="#home">الرئيسية</a></li>
+            <li><a href="#sections">المنتجات</a></li>
+            <li><a href="#about">من نحن</a></li>
+            <li><a href="#contact">تواصل معنا</a></li>
+        </ul>
+        <div onclick="checkAdminClick()">
+            <img src="https://i.ibb.co/3y1ZNCk0/1.png" alt="شعار شبابيك" class="logo-img">
+        </div>
+    </header>
+
+    <div id="userPage" class="page active">
+        <section class="hero" id="home">
+            <h1>فخامة التفاصيل تبدأ من <br> <span>شبابيك منزلك</span></h1>
+            <p>اكتشف أفخم تشكيلة ستائر منزلية بتصاميم عصرية وكلاسيكية تناسب ذوقك الرفيع وتضفي لمسة جمالية على بيتك.</p>
+            <div class="hero-btns">
+                <a href="https://wa.me/9647883002797" class="btn-gold-lg">احسب سعر ستارتك الآن</a>
+                <a href="https://wa.me/9647883002797" class="btn-outline-lg">طلب استشارة منزلية</a>
+            </div>
+        </section>
+
+        <section class="section-padding" id="sections">
+            <h2 class="section-title">أقسامنا</h2>
+            <p class="section-subtitle">اختر من بين مجموعتنا المتنوعة والأنيقة</p>
+            <div class="categories-grid" id="mainProductsGrid">
+                </div>
+        </section>
+
+        <div class="features-bg">
+            <div class="section-padding">
+                <h2 class="section-title">لماذا شبابيك؟</h2>
+                <p class="section-subtitle">مميزات تجعلنا الخيار الأول لعملائنا</p>
+                <div class="features-grid">
+                    <div class="feature-box"><i class="fa-solid fa-palette"></i><h3>تصاميم حصرية</h3><p>مجموعة متنوعة من التصاميم العصرية والكلاسيكية.</p></div>
+                    <div class="feature-box"><i class="fa-solid fa-ruler-combined"></i><h3>مقاسات مخصصة</h3><p>تفصيل على حسب مقاسات نوافذك بدقة عالية.</p></div>
+                    <div class="feature-box"><i class="fa-solid fa-truck-fast"></i><h3>تركيب منزلي</h3><p>فريق متخصص لتركيب الستائر في منزلك باحترافية.</p></div>
+                    <div class="feature-box"><i class="fa-solid fa-shield-halved"></i><h3>ضمان الجودة</h3><p>ضمان شامل على جميع منتجاتنا وخدماتنا المقدمة.</p></div>
+                </div>
+            </div>
+        </div>
+
+        <footer id="contact">
+            <div class="footer-grid">
+                <div class="footer-box">
+                    <h3 class="footer-h3">شبابيك للستائر</h3>
+                    <p class="footer-p">نقدم أفخم تشكيلة من الستائر المنزلية بأعلى جودة وأفضل الأسعار، خبرة طويلة في عالم التصميم والتركيب نضعها بين أيديكم.</p>
+                    <a href="https://wa.me/9647883002797" class="whatsapp-btn">
+                        <i class="fa-brands fa-whatsapp"></i> تواصل عبر واتساب
+                    </a>
+                </div>
+                <div class="footer-box">
+                    <h3 class="footer-h3">روابط سريعة</h3>
+                    <ul style="list-style:none; line-height:2;">
+                        <li><a href="#" style="color:white; text-decoration:none;">الرئيسية</a></li>
+                        <li><a href="#sections" style="color:white; text-decoration:none;">المنتجات</a></li>
+                        <li><a href="#" style="color:white; text-decoration:none;">من نحن</a></li>
+                        <li><a href="#contact" style="color:white; text-decoration:none;">تواصل معنا</a></li>
+                    </ul>
+                </div>
+                <div class="footer-box">
+                    <h3 class="footer-h3">تواصل معنا</h3>
+                    <p class="footer-
